--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,12 @@
     padding: 0;
     margin: 0;
 }
+span{
+    color: white;
+}
+body{
+    background-color: #131313;
+}
 canvas {
     width: 100%;
     height: auto;
